Alcune correzioni grammaticali

--- a/svolgimento.tex
+++ b/svolgimento.tex
@@ -14,7 +14,7 @@
 		logico) di tutti gli enunciati ($S1(n)\land S2(n)\land \ldots \land Sk(n)$).
 		Tuttavia di solito conviene tenere separati gli enunciati e dimostrare per
 		ciascuno la rispettiva base e il passo induttivo. Questo tipo di dimostrazione
-		\'e detto induzione mutua.
+		\'e detto \emph{induzione mutua}.
 		
 		Consideriamo ad esempio un interruttore on/off, rappresentato con il seguente
 		automa:
@@ -96,9 +96,9 @@
 		
 		\begin{itemize}
 		  \item Ogni enunciato deve essere dimostrato separatamente nella base e nel
-		  paso induttivo.
+		  passo induttivo.
 		  \item Se si tratta di enunciati `se e solo se`, allora entrambe le direzioni
-		  di ogni enunciato devono essere dimostrare, sia nella base che nel passo
+		  di ogni enunciato devono essere dimostrate, sia nella base che nel passo
 		  induttivo.
 		\end{itemize}
 		
