--- a/document.tex
+++ b/document.tex
@@ -57,7 +57,8 @@ parts]{classicthesis}
 \usepackage[latin1]{inputenc} 
 \usepackage[T1]{fontenc} 
 \usepackage[square,numbers]{natbib} 
-\usepackage[fleqn]{amsmath}  
+\usepackage[fleqn]{amsmath} 
+\usepackage{amssymb}   
 \usepackage{ellipsis}
 \usepackage{subfig}
 \usepackage{caption}
@@ -67,6 +68,7 @@ parts]{classicthesis}
 \usepackage{tikz}
 \usepackage[object=vectorian]{pgfornament}
 \usepackage{listings}
+\usepackage{mathpartir}
 %--------------------------------------------------------------
 \newlength{\abcd} % for ab..z string length calculation
 % how all the floats will be aligned
@@ -112,6 +114,11 @@ parts]{classicthesis}
 		}
 	\end{center}
 }
+\newcommand{\aacc}{\`a\ }
+\newcommand{\eacc}{\`e\ }
+\newcommand{\iacc}{\`{\i}\ }
+\newcommand{\oacc}{\`o\ }
+\newcommand{\uacc}{\`u\ }
 %--------------------------------------------------------------
 \begin{document}
 \frenchspacing
