--- a/titlePage.tex
+++ b/titlePage.tex
@@ -18,7 +18,7 @@
       \vfill 
       \begingroup
       	\color{Maroon}\spacedallcaps{\myItalianTitle} \\ $\ $\\
-      	\spacedallcaps{\myEnglishTitle}	
+%      	\spacedallcaps{\myEnglishTitle}	
 	\bigskip
       \endgroup
       \spacedlowsmallcaps{\myName}
